showaddress and showpayment

--- a/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
+++ b/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
@@ -14,12 +14,17 @@
                 <a routerLink="/showproducts" routerLinkActive="active" class="btn btn-dark">รายการสินค้า</a>
             </li>
             <li class="nav-item">
+                <a routerLink="/showaddress" routerLinkActive="active" class="btn btn-dark">ที่อยู่จัดส่งสินค้า</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/showpayment" routerLinkActive="active" class="btn btn-dark">บัญชีสำหรับชำระเงิน</a>
+            </li>
+            <li class="nav-item">
                 <a routerLink="/statusproducts" routerLinkActive="active" class="btn btn-dark">สถานะของสินค้า</a>
             </li>
             <li class="nav-item">
                 <a routerLink="/profile" routerLinkActive="active" class="btn btn-dark">โปรไฟล์ผู้ใช้</a>
             </li>
-            
         </ul>
         <a routerLink="/cart" class="btn btn-dark">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>รถเข็นของฉัน
