--- a/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
+++ b/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
@@ -11,7 +11,7 @@
                 <a routerLink="/addproducts" routerLinkActive="active" class="btn btn-dark">เพิ่มสินค้า</a>
             </li>
             <li class="nav-item">
-                <a routerLink="/showproducts" routerLinkActive="active" class="btn btn-dark">รายการสินค้า</a>
+                <a routerLink="/showproducts" routerLinkActive="active" class="btn btn-dark">รายการสินค้าของคุณ</a>
             </li>
             <li class="nav-item">
                 <a routerLink="/showaddress" routerLinkActive="active" class="btn btn-dark">ที่อยู่จัดส่งสินค้า</a>
