--- a/frontend-angular-app/src/app/components/products/products.component.html
+++ b/frontend-angular-app/src/app/components/products/products.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid" style="margin-top:30px">           
     <div class="row">
         <div class="col-md-12">
-            <h2>รายการสินค้า</h2>
+            <h2>รายการสินค้าทั้งหมด</h2>
             <div class="table-responsive-md">
                 <table class="table table-striped table-inverse">
                     <thead class="thead-inverse">
