--- a/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
+++ b/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
@@ -28,7 +28,7 @@
         </ul>
         <a routerLink="/cart" class="btn btn-dark">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>รถเข็นของฉัน
-            <span class="badge badge-info">{{getCounter()}}</span>
+            <span class="badge badge-info">{{getCounter() - delcart}}</span>
         </a>
     </div>
 </nav>
