--- a/frontend-angular-app/src/app/components/signup/signup.component.html
+++ b/frontend-angular-app/src/app/components/signup/signup.component.html
@@ -49,7 +49,7 @@
 
                         <div class="form-group">
                             <label>โทรศัพท์.</label>
-                            <input type="text" class="form-control" formControlName='Tel'>
+                            <input type="number" class="form-control" formControlName='Tel'>
                         </div><br />
 
                         <br /><br />
