--- a/frontend-angular-app/src/app/components/address/address.component.html
+++ b/frontend-angular-app/src/app/components/address/address.component.html
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                      <input type="text" class="form-control" formControlName='postal'>
+                                      <input type="number" class="form-control" formControlName='postal'>
                                     </div>
                                 </div>
                             </div>
