--- a/frontend-angular-app/src/app/components/payment/payment.component.html
+++ b/frontend-angular-app/src/app/components/payment/payment.component.html
@@ -28,7 +28,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                      <input type="text" class="form-control" formControlName='accountID'>
+                                      <input type="number" class="form-control" formControlName='accountID'>
                                     </div>
                                 </div>
                             </div>
